--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Blackjack</title>
 </head>
 <body>
-    
+    <h1>Blackjack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p>Cards:</p>
+    <p>Sum:</p>
+    <button id="start-el" onclick="startGame()">START GAME</button>
 </body>
 <script src="script.js"></script>
 </html>
