--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p id="sum-el">Sum:</p>
     <button id="start-el" onclick="startGame()">START GAME</button>
     <button id="newcard-el" onclick="getNewCard()">NEW CARD</button>
+    <p id="player-el"></p>
 </body>
 <script src="script.js"></script>
 </html>
